test/conformance/chainsaw/validate/clusterpolicy/standard/audit(deprecated)/background-vars-userInfo/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: background-vars-userinfo
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl apply -f manifests.yaml
        check:
          # This check below ensures that the string 'variable {{request.userInfo}} is not allowed' is found in stderr or else fails
          (contains($stderr, 'variable {{request.userInfo}} is not allowed')): true
  - name: step-02
    try:
    - error:
        file: chainsaw-step-02-error-1-1.yaml
